# dns-check

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
dns-auditor/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  NOTICE  SECURITY.md  pyproject.toml
src/dns_check/: __init__.py  checker.py  cli.py
tests/: test_checker.py  test_cli.py
